     Rob Mueller, Jeremy Howard and Horms
   - Handle spaces in POP passwords.
     Rob Mueller, Kurian Aerthail, Jeremy Howard and Horms
   - Make includes in log.h work outside the perdition tree. Mark D. Roth
   - Postgress module returns correct value (-2) if user can't be found.
     This allows query strings to work correctly. Timur Khanjanov

----------------------------------------------------------------------

6th June 2003
(Horms)
   * 1.11
   - Minor clean up of warning about missing root privalges
     if authenticate_in is in effect.
   - Minor clean up of per-module check messages in configure
   - New Debian standards version
   - Fixed debian init script so it can stop perdition correctly
   - Removed spurious multi line string literal in ssl.c
   - Test for Berkely DB >= 4.1. It seems that they
     interface to db->open() is different as of that
     version (fools!). 
   - Removed acconfig.h as it is no longer needed
   - Minor cleanup of ssl check in configure
   - Fixed minor typo in debian init script
   - Tidied up ssl variables in configure
   - Removed spurious multi-line string constant
     from perdition_verify_result() which seems
     to cause compile problems on at least Debian HPPA.

----------------------------------------------------------------------

18th April 2003
(Horms)
   * 1.11beta8
   - Fixed capability command for POP3S
   - Minor updates to databse documentation for MySQL and ODBC
   - Flags should now work correcly in the debian init script.
     Kilian Cavalott
   - Fixed segmentation fault when using the query_key option
     with end-users whose usernames are more than 32 characters long.
   - Fixed parsing of LDAP URLs so that non %s format elements are
     ignored. Perviously they caused the URL to be treated as invalid.
   - Fixed ODBC module so that it should no longer segmentation fault
     when trying to do a query.
   - Don't check for symbols in libdb.a at configure time,