@@ -132,6 +132,14 @@ static int __perdition_ssl_passwd_cb(char *buf, int size, int rwflag,
  *               Should the path to a PEM file if non-NULL and the
  *               first item in the PEM file will be used as the 
  *               private key.
+ *      chain_file : Sets the optional all-in-one file where you 
+ *               can assemble the certificates of Certification Authorities 
+ *               (CA) which form the certificate chain of the server 
+ *               certificate. This starts with the issuing CA certificate 
+ *               of the "ssl_cert_file" certificate and can range up to 
+ *               the root CA certificate. Such a file is simply the
+ *               concatenation of the various PEM-encoded CA Certificate 
+ *               files, usually in certificate chain order.  
  *      ciphers: cipher list to use as per ciphers(1). 
  *               May be NULL in which case openssl's default is used.
  * post: If SSL is initiated and a context is created
@@ -141,6 +149,9 @@ static int __perdition_ssl_passwd_cb(char *buf, int size, int rwflag,
  *       against certificate.
  *       Note: If either cert of privkey are non-NULL then both must
  *       be non-NULL.
+ *       If chain_file is not null, it must contain alist of (syntactically)
+ *       valid pem-encoded certificates 
+ *
  **********************************************************************/
 
 static int __perdition_verify_callback(int ok, X509_STORE_CTX *ctx)
@@ -389,7 +400,8 @@ static long __perdition_verify_result(long verify, X509 *cert)
 }
 
 SSL_CTX *perdition_ssl_ctx(const char *ca_file, const char *ca_path, 
-		const char *cert, const char *privkey, const char *ciphers)
+		const char *cert, const char *privkey, 
+		const char *chain_file, const char *ciphers)
 {
 	SSL_METHOD *ssl_method;
 	SSL_CTX *ssl_ctx;
@@ -490,6 +502,18 @@ SSL_CTX *perdition_ssl_ctx(const char *ca_file, const char *ca_path,
 
 	/* NB: We do not need to call SSL_CTX_check_private_key()
 	 * because SSL_CTX_set_verify_depth has been called */
+
+/* try to load the certificate chain file if it is not null*/
+	if (chain_file) {
+		if (!SSL_CTX_load_verify_locations(ssl_ctx,chain_file,NULL)) {
+			PERDITION_DEBUG_SSL_ERR_UNSAFE(
+					"SSL_CTX_load_verify_locations: "
+					"could not load CA file %s", 
+					chain_file);
+			SSL_CTX_free(ssl_ctx);
+			return(NULL);
+		}
+	}
 
 	return (ssl_ctx);
 }
@@ -763,7 +787,8 @@ io_t *perdition_ssl_client_connection(io_t * io, const char *ca_file,
 	SSL_CTX *ssl_ctx;
 	io_t *new_io;
 
-	ssl_ctx = perdition_ssl_ctx(ca_file, ca_path, NULL, NULL, ciphers);
+	ssl_ctx = perdition_ssl_ctx(ca_file, ca_path, NULL, NULL, NULL,
+			ciphers);
 	if (!ssl_ctx) {
 		PERDITION_DEBUG_SSL_ERR("perdition_ssl_ctx");
 		io_destroy(io);
